Fix Documentation et mise à jour
